# deeplearning

./: .gitignore  README.md  gradient_descent.py
.ipynb_checkpoints/: deepLearning-checkpoint  remove_output-checkpoint.py
DeepLearning.ai/: README.md
DeepLearning.ai/test/: NeuralNetwork.ipynb  lr_utils.py  planar_utils.py
HandleRecognitionTest/: ArgumentList.cpp  ArgumentList.h  BackgroundExtractionGraphicsItem.cpp  BackgroundExtractionGraphicsItem.h  CMakeLists.txt  CVMatQImageConversion.cpp  CVMatQImageConversion.h  ClusterMoments.cpp  ClusterMoments.h  CreateBackgroundSubtractionTest.cpp  CreateBackgroundSubtractionTest.h  ImageIconGraphicsItem.cpp  ImageIconGraphicsItem.h  ImagesCanvas.cpp  ImagesCanvas.h  KMeansIconGraphicsItem.cpp  KMeansIconGraphicsItem.h  MainWidget.cpp  MainWidget.h  TestWithCaffeModel.cpp  TestWithCaffeModel.h  TestWithTensorFlowModel.cpp  TestWithTensorFlowModel.h  VertHorizHistoGraphicsItem.cpp  VertHorizHistoGraphicsItem.h  main.cpp
HandleRecognitionTest/.ipynb_checkpoints/: todo-checkpoint.txt
Neural Network for face Recognition/: Check_images.py  real_validation.py  take_photo.py  training.py  validate.py
TensorFlow/: common.py  data_loading.py  freeze.py  freeze.sh  network_alexnet.py  network_ciresan.py  network_lenetlike.py  network_vgg16.py  prepareImages.py  session.py  test_single_image.py  test_test_set.py  test_training_set.py
Udacity/: 1_notmnist.ipynb  2_fullyconnected.ipynb  3_regularization.ipynb  4_convolutions.ipynb  5_word2vec.ipynb  test.ipynb  test_Graph.ipynb  tf_example.ipynb
Udacity/.ipynb_checkpoints/: 1_notmnist-checkpoint.ipynb  3_regularization-checkpoint.ipynb  4_convolutions-checkpoint.ipynb
handleRecognition/: BackgroundCrateHandleSegmenter.cpp  BackgroundCrateHandleSegmenter.h  CMakeLists.txt  CrateHandle.cpp  CrateHandle.h  CrateHandleClassifier.cpp  CrateHandleClassifier.h  CrateHandleExtractor.cpp  CrateHandleExtractor.h  FloodFillCrateHandleSegmenter.cpp  FloodFillCrateHandleSegmenter.h  HandleRecognitionSegment.cpp  HandleRecognitionSegment.h  KMeansCrateHandleSegmenter.cpp  KMeansCrateHandleSegmenter.h
handleRecognition/DataBaseStructures/: VertHorizHistoDB.cpp  VertHorizHistoDB.h  logohandle.cpp  logohandle.h
handleRecognition/SegmentationMethods/: ConnectedComponentLabelling.cpp  ConnectedComponentLabelling.h  GenericKMeansImageClusterer.h  ImageSegment.cpp  ImageSegment.h  MostRepresentedColors.cpp  MostRepresentedColors.h  OpenCVClusterer.cpp  OpenCVClusterer.h  OpenCVEMClusterer.cpp  OpenCVEMClusterer.h  OpenCVKMeansClusterer.cpp  OpenCVKMeansClusterer.h  RGBCVMatForKMeans.h  RGBImageClusterer.cpp  RGBImageClusterer.h  RGBImageClusteringSegmenter.cpp  RGBImageClusteringSegmenter.h  VectorDouble.cpp  VectorDouble.h
(+47 files in other folders)
